# budgeting

./: .gitignore  DataLoader.py  README.md  _types.py  first.py  known_aliases.csv  pyproject.toml  swa-cli.config.json
.github/workflows/: azure-static-web-apps-salmon-dune-067428903.yml
swa-db-connections/: staticwebapp.database.config.json
